# yapimt3

./: .gitignore  CMakeLists.txt  Code7.cs  Interpreter.cpp  Interpreter.h  Lab3.cpp  Lexer.cpp  Lexer.h  LexerTypes.cpp  Parser.cpp  Parser.h  Tables.cpp  Tables.h  Utils.cpp  Utils.h  errors.txt  input.txt  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  lexertypes.cpp  lexertypes.h  main.cpp  parser.cpp  parser.h  reserved_words.txt  tables.cpp  tables.h  tokens.txt  utils.cpp  variables.txt
config/: delimiters.txt  reserved_words.txt
data/: variables.txt
output/: errors.txt  jumps.txt  poliz.txt  tokens.txt  trace.txt
Тесты/: TestResults.txt  test1.txt  test2.txt  test_add_1.txt  test_add_2.txt  test_add_3.txt  test_add_4.txt  test_add_5.txt  test_outputs.txt
